# guardrail_service

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  LICENSE  README.md  Taskfile.yaml  constraints.txt  mypy.ini  pyproject.toml
assets/data/: Compliance_Test_Cases__SDLC___Networking_.csv  test_inputs.json
assets/docs/: CCC Compliance Check Framework.docx  Scenario Wise Meta Prompts.docx
examples/: chatcompletion.py  compliance_check.py
rules/: azure_ccc_compliances.yaml  compliances.yaml
scripts/: guardrail_lint.py
src/app/: main.py
src/app/core/: config.py  logging.py
src/app/models/: azure_config.py  compliance_definition.py  evaluation_patterns.py  request_logger.py  schemas.py
src/app/routers/: aggregator_result.py  scan.py
src/app/scripts/: run_compliance_tests.py
src/app/services/: compliance_service.py  parser.py
src/app/templates/: aggregator.md  ccc_compliance_tidd_template.md  compliance.md  compliance_eval.md  compliance_eval_with_documents.md  compliance_template.md  copyrightcompliance.md  groundingcompliance.md  harmfulcontentcompliance.md  summarizecompliance.md  system.md
src/app/utils/: utils.py
src/evaluation/: run_tests.py
src/evaluation/evaluated/: evaluate_results.py
src/logs/: request_1abfc90a-a988-442b-beaf-ecc0c71c26a9.json  request_35133c79-ce12-44bd-a3ca-b61eb438eb9c.json  request_3f0edc08-f00e-45a8-aa92-a7169f4a68d8.json  request_42b81bb4-8c23-4f1a-b307-5a8d294c7ea1.json  request_62a81a78-871c-405f-983f-749c3b368577.json  request_7e20839b-7760-4fbc-8230-35cb5d15dcac.json  request_beed9b35-a885-413e-a785-2f72313da33e.json  request_ea25253e-37de-43ee-bb75-e32f320a3cb8.json  request_f58b7437-7757-4006-a3e2-47f4376158fe.json  request_ff74827e-365f-49f4-9197-4812b96a5eb8.json
(+101 files in other folders)
