[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcl-guardrail-service"
version = "0.1.0"
description = "Azure Function project"
requires-python = ">=3.9"
dependencies = [
    "azure-functions",
    "azure-functions-worker",
    "azure-identity",
    "azure-storage-blob",
    "azure-keyvault-secrets",
    "python-dotenv",
    "langchain-openai>=0.3.22",
    "ruff>=0.11.12",
    "isort>=6.0.1",
    "yamllint>=1.37.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["azure_function"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.uv]
override-dependencies = [
  "grpcio>=1.48",
  "grpcio-tools>=1.48"
]
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["env/*"]
skip = [".git", "__pycache__", "build", "dist"]
known_first_party = ["app"]
known_third_party = ["fastapi", "pydantic", "langchain", "yaml"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
